apps/bgd/overlays/bgd/bgd-rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-bgd
spec:
  replicas: 3
  revisionHistoryLimit: 1
  workloadRef:
    apiVersion: apps/v1
    kind: Deployment
    name: bgd
  strategy:
    canary: 
      steps: 
      - setWeight: 20 
      - pause: {}  
      - setWeight: 40
      - pause: {duration: 45}  
      - setWeight: 60
      - pause: {duration: 20}
      - setWeight: 80
      - pause: {duration: 10}
  revisionHistoryLimit: 2
